# url-shortener

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/shortener/: __main__.py  app.py  db.py  models.py  settings.py  title_fetch.py
src/shortener/static/: style.css
src/shortener/templates/: index.html
tests/: conftest.py  test_app.py  test_db.py  test_models.py  test_settings.py  test_title_fetch.py
